force-app/main/default/objects/CompanyVehicle__c/CompanyVehicle__c.object-meta.xml
<CustomObject>
    <label>社用車</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>