force-app/main/default/objects/CompanyVehicle__c/fields/Base_formula__c.field-meta.xml
<CustomField>
    <fullName>Base_formula__c</fullName>
    <description>リストビューでの条件用に作成。山本</description>
    <formula>TEXT( Base__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>拠点（条件用）</label>
    <type>Text</type>
</CustomField>