force-app/main/default/objects/CompanyVehicle__c/fields/CarDashcam__c.field-meta.xml
<CustomField>
    <fullName>CarDashcam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ドラレコ車載器</label>
    <referenceTo>DriveRecorder__c</referenceTo>
    <relationshipLabel>社用車</relationshipLabel>
    <relationshipName>CarDashcam_CompanyVehicle</relationshipName>
    <type>Lookup</type>
</CustomField>