force-app/main/default/objects/CompanyVehicle__c/fields/Carmodel__c.field-meta.xml
<CustomField>
    <fullName>Carmodel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>社用車</relationshipLabel>
    <relationshipName>Carmodel</relationshipName>
    <type>Lookup</type>
</CustomField>