force-app/main/default/objects/CompanyVehicle__c/fields/check__c.field-meta.xml
<CustomField>
    <fullName>check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社用車チェック</label>
    <referenceTo>CompanyVehicleCheck__c</referenceTo>
    <relationshipLabel>社用車</relationshipLabel>
    <relationshipName>checkLEMX</relationshipName>
    <type>Lookup</type>
</CustomField>