force-app/main/default/objects/CompanyVehicle__c/fields/CheckManager__c.field-meta.xml
<CustomField>
    <fullName>CheckManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>チェック担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_CompanyVehicle</relationshipName>
    <type>Lookup</type>
</CustomField>