force-app/main/default/objects/CompanyVehicle__c/fields/drive_recorder__c.field-meta.xml
<CustomField>
    <fullName>drive_recorder__c</fullName>
    <label>ドラレコ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>三菱</fullName>
            </value>
            <value>
                <fullName>三菱(インカメ有）</fullName>
            </value>
            <value>
                <fullName>大阪ガス</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
            <value>
                <fullName>取付依頼中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>