force-app/main/default/objects/CompanyVehicle__c/fields/DriveSystem__c.field-meta.xml
<CustomField>
    <fullName>DriveSystem__c</fullName>
    <label>駆動方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>