force-app/main/default/objects/CompanyVehicle__c/fields/ETC__c.field-meta.xml
<CustomField>
    <fullName>ETC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ETCカード</label>
    <referenceTo>ETC__c</referenceTo>
    <relationshipLabel>社用車</relationshipLabel>
    <relationshipName>ETC_CompanyVehicle</relationshipName>
    <type>Lookup</type>
</CustomField>