force-app/main/default/objects/CompanyVehicle__c/fields/Fixed_assets_registered__c.field-meta.xml
<CustomField>
    <fullName>Fixed_assets_registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>固定資産登録済</label>
    <type>Checkbox</type>
</CustomField>