force-app/main/default/objects/CompanyVehicle__c/fields/Gasoline__c.field-meta.xml
<CustomField>
    <fullName>Gasoline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ガソリンカード</label>
    <referenceTo>Gasoline__c</referenceTo>
    <relationshipLabel>社用車</relationshipLabel>
    <relationshipName>Gasoline_CompanyVehicle</relationshipName>
    <type>Lookup</type>
</CustomField>