force-app/main/default/objects/CompanyVehicle__c/fields/Insurance_cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_cancellation_date__c</fullName>
    <label>保険解約日</label>
    <type>Date</type>
</CustomField>