force-app/main/default/objects/CompanyVehicle__c/fields/Insurance_confirmation_date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_confirmation_date__c</fullName>
    <label>保険確認日</label>
    <type>Date</type>
</CustomField>