force-app/main/default/objects/CompanyVehicle__c/fields/Insurance_enrollment_date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_enrollment_date__c</fullName>
    <label>保険加入日</label>
    <type>Date</type>
</CustomField>