force-app/main/default/objects/CompanyVehicle__c/fields/LastCheckDate__c.field-meta.xml
<CustomField>
    <fullName>LastCheckDate__c</fullName>
    <description>山本</description>
    <label>最終チェック日</label>
    <type>Date</type>
</CustomField>