force-app/main/default/objects/CompanyVehicle__c/fields/license_plate_type__c.field-meta.xml
<CustomField>
    <fullName>license_plate_type__c</fullName>
    <label>ナンバープレート種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自家用</fullName>
            </value>
            <value>
                <fullName>事業用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>