force-app/main/default/objects/CompanyVehicle__c/fields/Mst_Models_formula__c.field-meta.xml
<CustomField>
    <fullName>Mst_Models_formula__c</fullName>
    <description>経理部のため</description>
    <formula>Carmodel__r.Name</formula>
    <label>車種（表示用）</label>
    <type>Text</type>
</CustomField>