force-app/main/default/objects/CompanyVehicle__c/fields/No_vehicle_inspection__c.field-meta.xml
<CustomField>
    <fullName>No_vehicle_inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>車検なし</label>
    <type>Checkbox</type>
</CustomField>