force-app/main/default/objects/CompanyVehicle__c/fields/old_number__c.field-meta.xml
<CustomField>
    <fullName>old_number__c</fullName>
    <label>旧ナンバー</label>
    <length>50</length>
    <type>Text</type>
</CustomField>