force-app/main/default/objects/CompanyVehicle__c/fields/ownership__c.field-meta.xml
<CustomField>
    <fullName>ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>所有</label>
    <type>Checkbox</type>
</CustomField>