force-app/main/default/objects/CompanyVehicle__c/fields/OwnershipCompany__c.field-meta.xml
<CustomField>
    <fullName>OwnershipCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>所有権会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>社用車</relationshipLabel>
    <relationshipName>OwnershipCompany</relationshipName>
    <type>Lookup</type>
</CustomField>