force-app/main/default/objects/CompanyVehicle__c/fields/purchase_amount_excluding_tax__c.field-meta.xml
<CustomField>
    <fullName>purchase_amount_excluding_tax__c</fullName>
    <label>購入金額（税抜）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>