force-app/main/default/objects/CompanyVehicle__c/fields/purchase_category__c.field-meta.xml
<CustomField>
    <fullName>purchase_category__c</fullName>
    <label>購入時区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新車</fullName>
            </value>
            <value>
                <fullName>中古車</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>