force-app/main/default/objects/CompanyVehicle__c/fields/RecycleFee__c.field-meta.xml
<CustomField>
    <fullName>RecycleFee__c</fullName>
    <label>リサイクル料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>