force-app/main/default/objects/CompanyVehicle__c/fields/remarks__c.field-meta.xml
<CustomField>
    <fullName>remarks__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>