force-app/main/default/objects/CompanyVehicle__c/fields/room_cleaning_date__c.field-meta.xml
<CustomField>
    <fullName>room_cleaning_date__c</fullName>
    <label>室内清掃日</label>
    <type>Date</type>
</CustomField>