force-app/main/default/objects/CompanyVehicle__c/fields/spare__c.field-meta.xml
<CustomField>
    <fullName>spare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>予備</label>
    <type>Checkbox</type>
</CustomField>