force-app/main/default/objects/CompanyVehicle__c/fields/submission_delay__c.field-meta.xml
<CustomField>
    <fullName>submission_delay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>スケジュールトリガフローで月初5営業日経過したらチェックがつく。山本</description>
    <label>提出遅延</label>
    <type>Checkbox</type>
</CustomField>