force-app/main/default/objects/CompanyVehicle__c/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>仕入先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>仕入れた社用車</relationshipLabel>
    <relationshipName>company_vehicle_supplier</relationshipName>
    <type>Lookup</type>
</CustomField>