force-app/main/default/objects/CompanyVehicle__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <formula>Day(Today())=21</formula>
    <label>社用車チェック削除日</label>
    <type>Checkbox</type>
</CustomField>