force-app/main/default/objects/CompanyVehicle__c/fields/User_text__c.field-meta.xml
<CustomField>
    <fullName>User_text__c</fullName>
    <description>山本</description>
    <label>使用者(テキスト)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>