force-app/main/default/objects/CompanyVehicle__c/fields/Vehicle_inspection__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_inspection__c</fullName>
    <label>車検情報</label>
    <type>Date</type>
</CustomField>