force-app/main/default/objects/CompanyVehicle__c/fields/vehicle_insurance__c.field-meta.xml
<CustomField>
    <fullName>vehicle_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>車両保険</label>
    <type>Checkbox</type>
</CustomField>