force-app/main/default/objects/CompanyVehicle__c/fields/VehicleDepartmentOwned__c.field-meta.xml
<CustomField>
    <fullName>VehicleDepartmentOwned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>車輌部所有</label>
    <type>Checkbox</type>
</CustomField>