force-app/main/default/objects/CompanyVehicle__c/fields/wrecker_special_agreement__c.field-meta.xml
<CustomField>
    <fullName>wrecker_special_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>法務課の依頼で作成</description>
    <label>レッカー特約</label>
    <type>Checkbox</type>
</CustomField>