force-app/main/default/objects/CompanyVehicle__c/validationRules/Vehicle_inspection_information.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_inspection_information</fullName>
    <active>true</active>
    <description>与儀</description>
    <errorConditionFormula>ISBLANK(Vehicle_inspection__c) &amp;&amp; NOT(No_vehicle_inspection__c)</errorConditionFormula>
    <errorMessage>車検情報を入力するか、車検なしにチェックを付けてください。</errorMessage>
</ValidationRule>