force-app/main/default/objects/CompanyVehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Carmodel__c</columns>
    <columns>Insurance_enrollment_date__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>CarNo__c</columns>
    <columns>User_text__c</columns>
    <columns>Base__c</columns>
    <columns>VehicleDepartmentOwned__c</columns>
    <columns>spare__c</columns>
    <columns>OwnershipCompany__c</columns>
    <columns>drive_recorder__c</columns>
    <columns>Sold__c</columns>
    <columns>remarks__c</columns>
    <columns>DriveSystem__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>