force-app/main/default/objects/CompanyVehicle__c/listViews/View23.listView-meta.xml
<ListView>
    <fullName>View23</fullName>
    <columns>NAME</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Carmodel__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>CarNo__c</columns>
    <columns>Base__c</columns>
    <columns>User_text__c</columns>
    <columns>vehicle_insurance__c</columns>
    <columns>VehicleDepartmentOwned__c</columns>
    <columns>remarks__c</columns>
    <columns>Sold__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>vehicle_insurance__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>車両保険付帯車輌</label>
</ListView>