force-app/main/default/objects/CompanyVehicle__c/listViews/View25.listView-meta.xml
<ListView>
    <fullName>View25</fullName>
    <columns>NAME</columns>
    <columns>Carmodel__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>CarNo__c</columns>
    <columns>Base__c</columns>
    <columns>remarks__c</columns>
    <columns>spare__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>wrecker_special_agreement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>レッカー特約付帯車輌</label>
</ListView>