force-app/main/default/objects/CompanyVehicle__c/listViews/View3.listView-meta.xml
<ListView>
    <fullName>View3</fullName>
    <columns>NAME</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Carmodel__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>CarNo__c</columns>
    <columns>OwnershipCompany__c</columns>
    <columns>User__c</columns>
    <columns>Base__c</columns>
    <columns>Vehicle_inspection__c</columns>
    <columns>spare__c</columns>
    <columns>VehicleDepartmentOwned__c</columns>
    <columns>remarks__c</columns>
    <columns>Sold__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_inspection__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/1/2025</value>
    </filters>
    <filters>
        <field>Sold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>車検期日確認用</label>
    <sharedTo>
        <role>Legal</role>
    </sharedTo>
</ListView>