force-app/main/default/objects/CompanyVehicle__c/listViews/View32.listView-meta.xml
<ListView>
    <fullName>View32</fullName>
    <columns>NAME</columns>
    <columns>Carmodel__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>CarNo__c</columns>
    <columns>User__c</columns>
    <columns>Base_formula__c</columns>
    <columns>spare__c</columns>
    <columns>drive_recorder__c</columns>
    <columns>CarDashcam__c</columns>
    <columns>remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>drive_recorder__c</field>
        <operation>equals</operation>
        <value>三菱(インカメ有）,大阪ガス</value>
    </filters>
    <label>インカメラ付き車輌</label>
</ListView>