force-app/main/default/objects/CompanyVehicle__c/listViews/View9.listView-meta.xml
<ListView>
    <fullName>View9</fullName>
    <columns>NAME</columns>
    <columns>ModelYearPickList__c</columns>
    <columns>Carmodel__c</columns>
    <columns>DriveSystem__c</columns>
    <columns>RegistrationNo__c</columns>
    <columns>CarNo__c</columns>
    <columns>OwnershipCompany__c</columns>
    <columns>User_text__c</columns>
    <columns>Base__c</columns>
    <columns>spare__c</columns>
    <columns>remarks__c</columns>
    <columns>drive_recorder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>spare__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Carmodel__c</field>
        <operation>notEqual</operation>
        <value>,デュトロ,ファイター,エルフ,キャンター,レンジャー,ダイナ,ハイエースバン,プロフィア</value>
    </filters>
    <filters>
        <field>remarks__c</field>
        <operation>notContain</operation>
        <value>使用予定</value>
    </filters>
    <filters>
        <field>User_text__c</field>
        <operation>notEqual</operation>
        <value>法務課</value>
    </filters>
    <filters>
        <field>remarks__c</field>
        <operation>notContain</operation>
        <value>売却予定</value>
    </filters>
    <filters>
        <field>VehicleDepartmentOwned__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>予備車（営業車のみ）</label>
    <sharedTo>
        <role>Legal</role>
    </sharedTo>
</ListView>